<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="android.text.TextUtils"/>
        <import type="com.rc.android.habittracker.Habit"/>
        <import type="com.rc.android.habittracker.HabitFreq"/>
        <import type="com.rc.android.homework.ui.binding.ConverterBinding"/>

        <variable
            name="viewModel"
            type="com.rc.android.homework.ui.viewmodels.HabitEditingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/screen_background_light"
        tools:context=".ui.fragment.HabitEditingFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/habit_name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewModel.habit.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/habit_priority_title"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/HabitPriorities"
            android:selection="@={viewModel.habit.priority}"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/habit_type_title"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <RadioGroup
            android:id="@+id/habitTypeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6">

            <RadioButton
                android:id="@+id/usefulHabitRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.habit.type == Habit.Type.USEFULL}"
                android:onClick="@{ (view) -> viewModel.habitTypeRadioButtonClicked(Habit.Type.USEFULL)}"
                android:text="@string/usefull_habit" />

            <RadioButton
                android:id="@+id/harmfulHabitRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.habit.type == Habit.Type.HARMFULL}"
                android:onClick="@{ (view) -> viewModel.habitTypeRadioButtonClicked(Habit.Type.HARMFULL)}"
                android:text="@string/harmfull_habit" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="103dp"
            android:layout_height="36dp"
            android:layout_marginTop="40dp"
            android:text="@string/habit_execution_number_title"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/executionNumberEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text='@={ConverterBinding.intToString(viewModel.habit.freq.executionNumber)}'
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/habit_count_time_period_title"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/countTimePeriodEditText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:text='@={ConverterBinding.intToString(viewModel.habit.freq.countTimePeriod)}'
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/habit_decription_title"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/habitDecrEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:text="@={viewModel.habit.decr}"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <Button
            android:id="@+id/saveHabitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="28dp"
            android:text="@string/save_habit"
            android:onClick="@{ (view) -> viewModel.saveHabitButtonClicked()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/timePeriodSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/HabitFreqs"
            android:selection="@{viewModel.habit.freq.timePeriod.ordinal}"
            android:onItemSelected="@{(parent, view, position, id) -> viewModel.timePeriodSpinnerChanged(position)}"
            app:layout_constraintStart_toEndOf="@+id/countTimePeriodEditText"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>